[gd_scene load_steps=10 format=2]

[ext_resource path="res://world/interactive_objects/sign/sign.gd" type="Script" id=1]
[ext_resource path="res://art/sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.61372, 8.41776 )

[sub_resource type="Animation" id=2]

resource_name = "0"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 225, 0, 14, 16 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "1"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 242, 1, 14, 16 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "2"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 258, 1, 14, 16 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "3"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 225, 20, 15, 13 ) ]
}

[sub_resource type="Animation" id=6]

resource_name = "4"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 241, 20, 15, 13 ) ]
}

[sub_resource type="Animation" id=7]

resource_name = "5"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 257, 17, 15, 15 ) ]
}

[node name="Sign" type="Node2D"]

script = ExtResource( 1 )
type_of_sign = null
correct_number = 0

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 257, 17, 15, 15 )
_sections_unfolded = [ "Region" ]

[node name="ContactZone" type="Area2D" parent="." index="1"]

position = Vector2( 0, 0.128512 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContactZone" index="0"]

shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/0 = SubResource( 2 )
anims/1 = SubResource( 3 )
anims/2 = SubResource( 4 )
anims/3 = SubResource( 5 )
anims/4 = SubResource( 6 )
anims/5 = SubResource( 7 )
blend_times = [  ]

[connection signal="body_entered" from="ContactZone" to="." method="_on_ContactZone_body_entered"]

[connection signal="body_exited" from="ContactZone" to="." method="_on_ContactZone_body_exited"]


